# OurDAQ

./: .gitignore  Gesamtdokumentation.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/: AD9833.py  DMM.py  DMM_V1.py  DMM_V2.py  DMM_V2_W.py  DMM_web.py  Dashboard.ipynb  Dashboard.py  Dashboard_V1.py  Dashboard_V2.py  Dashboard_web.py  Diodenkennlinie.ipynb  Diodenkennlinie.py  Diodenkennlinie_Sven.py  Diodenkennlinie_V1.py  Diodenkennlinie_neu.ipynb  Diodenkennlinie_test.py  Filterkennlinie.ipynb  Filterkennlinie.py  Filterkennlinie_Sven.py  Filterkennlinie_V1.py  Filterkennlinie_neu.ipynb  Funktionsgenerator.ipynb  Funktionsgenerator.py  Funktionsgenerator_AD9833.py  Funktionsgenerator_Rechtecke.py  Funktionsgenerator_V1.py  Funktionsgenerator_test.py  Funktionsgenerator_web.py  Funktionsgenerator_web_test.py  MCC_Datenleser.py  Messdaten_Generator.py  Messdaten_Visualisierung.ipynb  Multimeter.py  Netzteil.py  Netzteil_minus.py  Netzteil_minus_test.py  Netzteil_minus_web.py  Netzteil_plus.py  Netzteil_plus_test.py  (+15 more)
src/ Test /: Dashboard_web.py
src/ neuer-ordner/: Dashboard_web.py  Diodenkennlinie_SWill.ipynb  Netzteil_web.py  Oszilloskop_web.py
src/Test/: DMM_test.py  DMM_web.py  DMM_web_test.py  Dashboard_web.py  Diodenkennlinie.ipynb  Diodenkennlinie_SWill.ipynb  Diodenkennlinie_test.py  Filterkennlinie.ipynb  Filterkennlinie_test.py  Funktionsgenerator_optimiert.py  Funktionsgenerator_web.py  Netzteil_Wi.py  Netzteil_minus.py  Netzteil_minus_kalibrieren.py  Netzteil_minus_web.py  Netzteil_plus.py  Netzteil_plus_kalibrieren.py  Netzteil_plus_web.py  (+4 more)
