[project]
name = "ourdaq"
version = "0.1.0"
description = "requirements for ourdaq"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "daqhats>=1.4.1.0",
    "matplotlib>=3.10.3",
    "mcculw>=1.0.0",
    "notebook>=7.4.2",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyqtgraph>=0.13.7",
]
