[project]
name = "ourdaq"
version = "0.1.0"
description = "requirements for ourdaq"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "daqhats>=1.4.1.0",
    "dash>=3.0.4",
    "gpiod>=2.3.0",
    "lgpio>=0.2.2.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pyqtgraph>=0.13.7",
    "rpi-gpio>=0.7.1",
    "spidev>=3.7",
]
